added meta tags for a more aesthetic link preview image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
   </style>
+
+
+      <meta property="og:title" content="JavaScript Grid Game Project - Nodes " />
+      <meta property="og:image" content="project_pic.png" />
+      <meta property="og:description" content="A puzzle/grid game created using vanilla JS and html5." />
+      <meta property="og:url" content="https://ralexander89.github.io/nodes_game/" />
 </head>
 
 <body>  
